fixed bug that caused overflow when screen size smaller than 1000px

--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -8,6 +8,8 @@
 
 @media (max-width: 1000px) {
     .mainArticle {
+        padding: 0;
+        justify-self: stretch;
         width: 100%;
     }
 }
